Refactor NotificationService.java